--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     margin: 0 auto;
     width: 100%;
     /* 📍 Максимальная ширина для контейнера */
+    max-width: 1568px;
 }
 
 body {
@@ -32,14 +33,20 @@ header span {
     padding: 60px 0;
     min-height: 100vh;
     /* 📍 Свойства flexbox для размещения container-a вертикально по центру */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main-section .wrapper {
     /* 📍 Свойствa flexbox для размещения блока с текстом и изображения в ряд, и центрирования их по вертикали */
+    display: flex;
+    align-items: center;
 }
 
 .text-wrapper {
     /* 📍 Cвойство для ограничения ширины блока с текстом в первой секции */
+    max-width: 1568px;
 }
 
 .main-title {
@@ -64,6 +71,10 @@ header span {
 
 .about-section .wrapper {
     /* 📍 Свойствa flexbox для отступов между элементами select, .info-wrapper и .skills-wrapper  */
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+
 }
 
 select {
@@ -74,7 +85,7 @@ select {
     font-weight: 400;
     font-size: 16px;
     appearance: none; 
-    background-image: url("./ep_arrow-down.svg");
+    background-image: url("./assets/image/ep_arrow-down.svg");
     background-repeat: no-repeat;
     background-position: right 12px top 50%;
 }
@@ -82,11 +93,14 @@ select {
 select:hover,
 .text-field:hover {
     /* 📍 Стили для выпадающего списка и текстового поля при наведении курсора */
+    border-color: #2965f1;
 }
 
 
 .info-wrapper {
     /* 📍 Свойство flexbox для расположения 2-х списков в ряд */
+    display: flex;
+
 }
 
 .section-title {
@@ -103,32 +117,52 @@ select:hover,
 .frameworks-list,
 .books-list {
     /* 📍 Свойства flexbox для отступов между элементами в списках */
+    gap:14px;
+
 }
 
 .frameworks-list {
     font-weight: 400;
     font-size: 16px;
-    list-style-image: url(./solar_map-arrow-up-bold.svg);
+    list-style-image: url(./assets/image/solar_map-arrow-up-bold.svg);
     padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+
 }
 
 .skills-block {
     /* 📍 Свойства flexbox для расположения формы над элементами с классом .label */
+    display: flex;
+    flex-direction: column-reverse;
 }
+
+
+
+
 
 .skills {
     /* 📍 Свойства flexbox для расположения элементов с классом .label */
+    min-width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .books-list {
     font-weight: 400;
     font-size: 16px;
     padding-left: 20px;
+    min-width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 
 .label {
     font-weight: 400;
     font-size: 16px;
+
 }
 
 form {
@@ -160,6 +194,8 @@ form {
 
 .btn:hover {
     /* 📍 Стили для кнопки при наведении курсора */
+    cursor: pointer;
+    background-color: #2965f1;
 }
 
 .line {
@@ -171,7 +207,7 @@ table {
     border-collapse: collapse;
     font-weight: 400;
     font-size: 14px;
-    margin: 0 auto;
+    margin: auto;
 }
 
 th, td {
@@ -182,6 +218,7 @@ footer {
     background-color: rgba(163, 167, 255, 0.3);
     padding: 26px 0;
     /* 📍 Свойство для расположения ссылки горизонтально по центру */
+    text-align: center;
 }
 
 .footer-link {
@@ -189,8 +226,10 @@ footer {
     font-size: 14px;
     color: #2965f1;
     text-decoration: none;
+
 }
 
 .footer-link:hover {
     /* 📍 Стили для ссылки при наведении курсора */
+    text-decoration: underline;
 }
